fix init-deploy test

--- a/e2e-tests/conf/some-name.yml
+++ b/e2e-tests/conf/some-name.yml
@@ -8,33 +8,39 @@ spec:
   secretsName: my-cluster-secrets
   pxc:
     size: 3
-    image: perconalab/pxc-openshift:0.2.0
+    image: percona/percona-xtradb-cluster-operator:0.3.0-pxc
     resources:
       requests:
-        memory: 1G
-        cpu: 600m
+        memory: 0.1G
+        cpu: 100m
       limits:
         memory: "1G"
         cpu: "1"
     volumeSpec:
-      accessModes: [ "ReadWriteOnce" ]
-      size: 6Gi
+      persistentVolumeClaim:
+        accessModes: [ "ReadWriteOnce" ]
+        resources:
+          requests:
+            storage: 1Gi
     affinity:
       antiAffinityTopologyKey: "kubernetes.io/hostname"
   proxysql:
     enabled: true
     size: 1
-    image: perconalab/proxysql-openshift:0.2.0
+    image: percona/percona-xtradb-cluster-operator:0.3.0-proxysql
     resources:
       requests:
-        memory: 1G
-        cpu: 600m
+        memory: 0.1G
+        cpu: 100m
       limits:
         memory: 1G
         cpu: 700m
     volumeSpec:
-      accessModes: [ "ReadWriteOnce" ]
-      size: 2Gi
+      persistentVolumeClaim:
+        accessModes: [ "ReadWriteOnce" ]
+        resources:
+          requests:
+            storage: 1Gi
     affinity:
       antiAffinityTopologyKey: "kubernetes.io/hostname"
   pmm:
@@ -43,4 +49,4 @@ spec:
     serverHost: monitoring-service
     serverUser: pmm
   backup:
-    image: perconalab/backupjob-openshift:0.2.0
+    image: percona/percona-xtradb-cluster-operator:0.3.0-backup
