--- a/e2e-tests/conf/client.yml
+++ b/e2e-tests/conf/client.yml
@@ -14,5 +14,5 @@ spec:
     spec:
       containers:
       - name: pxc-client
-        image: perconalab/backupjob-openshift:0.2.0
+        image: percona/percona-xtradb-cluster-operator:0.3.0-backup
         imagePullPolicy: IfNotPresent
