--- a/e2e-tests/init-deploy/compare/statefulset_no-proxysql-pxc.yml
+++ b/e2e-tests/init-deploy/compare/statefulset_no-proxysql-pxc.yml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   generation: 1
-  name: no-proxysql-pxc-node
+  name: no-proxysql-pxc
   ownerReferences:
   - apiVersion: pxc.percona.com/v1alpha1
     controller: true
@@ -16,14 +16,14 @@ spec:
     matchLabels:
       app: pxc
       cluster: no-proxysql
-      component: no-proxysql-pxc-nodes
-  serviceName: no-proxysql-pxc-nodes
+      component: no-proxysql-pxc
+  serviceName: no-proxysql-pxc
   template:
     metadata:
       labels:
         app: pxc
         cluster: no-proxysql
-        component: no-proxysql-pxc-nodes
+        component: no-proxysql-pxc
     spec:
       containers:
       - env:
@@ -57,7 +57,7 @@ spec:
           periodSeconds: 10
           successThreshold: 1
           timeoutSeconds: 5
-        name: node
+        name: pxc
         ports:
         - containerPort: 3306
           name: mysql
@@ -93,7 +93,7 @@ spec:
       volumes:
       - configMap:
           defaultMode: 420
-          name: no-proxysql-pxc-nodes
+          name: no-proxysql-pxc
           optional: true
         name: config-volume
   updateStrategy:
@@ -108,6 +108,6 @@ spec:
       - ReadWriteOnce
       resources:
         requests:
-          storage: 6Gi
+          storage: 1Gi
     status:
       phase: Pending
