--- a/e2e-tests/init-deploy/compare/statefulset_some-name-proxysql.yml
+++ b/e2e-tests/init-deploy/compare/statefulset_some-name-proxysql.yml
@@ -2,11 +2,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   generation: 1
-  labels:
-    app: pxc
-    cluster: some-name
-    component: some-name-pxc-proxysql
-  name: some-name-pxc-proxysql
+  name: some-name-proxysql
   ownerReferences:
   - apiVersion: pxc.percona.com/v1alpha1
     controller: true
@@ -20,14 +16,14 @@ spec:
     matchLabels:
       app: pxc
       cluster: some-name
-      component: some-name-pxc-proxysql
-  serviceName: some-name-pxc-proxysql
+      component: some-name-proxysql
+  serviceName: some-name-proxysql-headless
   template:
     metadata:
       labels:
         app: pxc
         cluster: some-name
-        component: some-name-pxc-proxysql
+        component: some-name-proxysql
     spec:
       affinity:
         podAntiAffinity:
@@ -45,7 +41,7 @@ spec:
               - key: component
                 operator: In
                 values:
-                - some-name-pxc-proxysql
+                - some-name-proxysql
             topologyKey: kubernetes.io/hostname
       containers:
       - env:
@@ -61,20 +57,11 @@ spec:
             secretKeyRef:
               key: proxyadmin
               name: my-cluster-secrets
-        - name: MYSQL_PROXY_USER
-          value: proxyuser
-        - name: MYSQL_PROXY_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              key: proxyuser
-              name: my-cluster-secrets
         - name: MONITOR_PASSWORD
           valueFrom:
             secretKeyRef:
               key: monitor
               name: my-cluster-secrets
-        - name: PXCSERVICE
-          value: some-name-pxc-nodes
         imagePullPolicy: Always
         name: proxysql
         ports:
@@ -89,18 +76,77 @@ spec:
             cpu: 700m
             memory: 1G
           requests:
-            cpu: 600m
-            memory: 1G
+            cpu: 100m
+            memory: 100M
         terminationMessagePath: /dev/termination-log
         terminationMessagePolicy: File
         volumeMounts:
         - mountPath: /var/lib/proxysql
           name: proxydata
           subPath: data
+      - args:
+        - /usr/bin/peer-list
+        - -on-change=/usr/bin/add_pxc_nodes.sh
+        - -service=$(PXC_SERVICE)
+        env:
+        - name: PXC_SERVICE
+          value: some-name-pxc
+        - name: MYSQL_ROOT_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              key: root
+              name: my-cluster-secrets
+        - name: PROXY_ADMIN_USER
+          value: proxyadmin
+        - name: PROXY_ADMIN_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              key: proxyadmin
+              name: my-cluster-secrets
+        - name: MONITOR_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              key: monitor
+              name: my-cluster-secrets
+        imagePullPolicy: Always
+        name: pxc-monit
+        resources: {}
+        terminationMessagePath: /dev/termination-log
+        terminationMessagePolicy: File
+      - args:
+        - /usr/bin/peer-list
+        - -on-change=/usr/bin/add_proxysql_nodes.sh
+        - -service=$(PROXYSQL_SERVICE)
+        env:
+        - name: PROXYSQL_SERVICE
+          value: some-name-proxysql-headless
+        - name: MYSQL_ROOT_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              key: root
+              name: my-cluster-secrets
+        - name: PROXY_ADMIN_USER
+          value: proxyadmin
+        - name: PROXY_ADMIN_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              key: proxyadmin
+              name: my-cluster-secrets
+        - name: MONITOR_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              key: monitor
+              name: my-cluster-secrets
+        imagePullPolicy: Always
+        name: proxysql-monit
+        resources: {}
+        terminationMessagePath: /dev/termination-log
+        terminationMessagePolicy: File
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       schedulerName: default-scheduler
       securityContext:
+        fsGroup: 1001
         supplementalGroups:
         - 99
       terminationGracePeriodSeconds: 30
@@ -116,6 +162,6 @@ spec:
       - ReadWriteOnce
       resources:
         requests:
-          storage: 2Gi
+          storage: 1Gi
     status:
       phase: Pending
