--- a/e2e-tests/init-deploy/compare/statefulset_some-name-pxc.yml
+++ b/e2e-tests/init-deploy/compare/statefulset_some-name-pxc.yml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   generation: 1
-  name: some-name-pxc-node
+  name: some-name-pxc
   ownerReferences:
   - apiVersion: pxc.percona.com/v1alpha1
     controller: true
@@ -16,14 +16,14 @@ spec:
     matchLabels:
       app: pxc
       cluster: some-name
-      component: some-name-pxc-nodes
-  serviceName: some-name-pxc-nodes
+      component: some-name-pxc
+  serviceName: some-name-pxc
   template:
     metadata:
       labels:
         app: pxc
         cluster: some-name
-        component: some-name-pxc-nodes
+        component: some-name-pxc
     spec:
       affinity:
         podAntiAffinity:
@@ -41,7 +41,7 @@ spec:
               - key: component
                 operator: In
                 values:
-                - some-name-pxc-nodes
+                - some-name-pxc
             topologyKey: kubernetes.io/hostname
       containers:
       - env:
@@ -75,7 +75,7 @@ spec:
           periodSeconds: 10
           successThreshold: 1
           timeoutSeconds: 5
-        name: node
+        name: pxc
         ports:
         - containerPort: 3306
           name: mysql
@@ -94,8 +94,8 @@ spec:
             cpu: "1"
             memory: 1G
           requests:
-            cpu: 600m
-            memory: 1G
+            cpu: 100m
+            memory: 100M
         terminationMessagePath: /dev/termination-log
         terminationMessagePolicy: File
         volumeMounts:
@@ -114,7 +114,7 @@ spec:
       volumes:
       - configMap:
           defaultMode: 420
-          name: some-name-pxc-nodes
+          name: some-name-pxc
           optional: true
         name: config-volume
   updateStrategy:
@@ -129,6 +129,6 @@ spec:
       - ReadWriteOnce
       resources:
         requests:
-          storage: 6Gi
+          storage: 1Gi
     status:
       phase: Pending
