--- a/e2e-tests/init-deploy/conf/no-proxysql.yml
+++ b/e2e-tests/init-deploy/conf/no-proxysql.yml
@@ -1,12 +1,12 @@
-apiVersion: "pxc.percona.com/v1alpha1"
-kind: "PerconaXtraDBCluster"
+apiVersion: pxc.percona.com/v1alpha1
+kind: PerconaXtraDBCluster
 metadata:
-  name: "no-proxysql"
+  name: no-proxysql
 spec:
   secretsName: my-cluster-secrets
   pxc:
     size: 3
-    image: perconalab/pxc-openshift:0.2.0
+    image: percona/percona-xtradb-cluster-operator:0.3.0-pxc
     configuration: |
       [mysqld]
       wsrep_debug=ON
@@ -17,25 +17,13 @@ spec:
         memory: 10M
         cpu: 100m
     volumeSpec:
-      accessModes: [ "ReadWriteOnce" ]
-      size: 6Gi
+      persistentVolumeClaim:
+        resources:
+          requests:
+            storage: 1Gi
     affinity:
       antiAffinityTopologyKey: none
   proxysql:
     enabled: false
-    size: 1
-    image: perconalab/proxysql-openshift:0.2.0
-    resources:
-      requests:
-        memory: 10M
-        cpu: 100m
-    volumeSpec:
-      accessModes: [ "ReadWriteOnce" ]
-      size: 2Gi
-    affinity:
-      antiAffinityTopologyKey: none
   pmm:
     enabled: false
-    image: perconalab/pmm-client:1.17.0
-    serverHost: monitoring-service
-    serverUser: pmm
