--- a/e2e-tests/storage/compare/statefulset_hostpath-pxc.yml
+++ b/e2e-tests/storage/compare/statefulset_hostpath-pxc.yml
@@ -2,12 +2,12 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   generation: 1
-  name: another-name-pxc-node
+  name: hostpath-pxc
   ownerReferences:
   - apiVersion: pxc.percona.com/v1alpha1
     controller: true
     kind: PerconaXtraDBCluster
-    name: another-name
+    name: hostpath
 spec:
   podManagementPolicy: OrderedReady
   replicas: 3
@@ -15,15 +15,15 @@ spec:
   selector:
     matchLabels:
       app: pxc
-      cluster: another-name
-      component: another-name-pxc-nodes
-  serviceName: another-name-pxc-nodes
+      cluster: hostpath
+      component: hostpath-pxc
+  serviceName: hostpath-pxc
   template:
     metadata:
       labels:
         app: pxc
-        cluster: another-name
-        component: another-name-pxc-nodes
+        cluster: hostpath
+        component: hostpath-pxc
     spec:
       affinity:
         podAntiAffinity:
@@ -37,11 +37,11 @@ spec:
               - key: cluster
                 operator: In
                 values:
-                - another-name
+                - hostpath
               - key: component
                 operator: In
                 values:
-                - another-name-pxc-nodes
+                - hostpath-pxc
             topologyKey: kubernetes.io/hostname
       containers:
       - env:
@@ -75,7 +75,7 @@ spec:
           periodSeconds: 10
           successThreshold: 1
           timeoutSeconds: 5
-        name: node
+        name: pxc
         ports:
         - containerPort: 3306
           name: mysql
@@ -89,13 +89,7 @@ spec:
           periodSeconds: 30
           successThreshold: 1
           timeoutSeconds: 15
-        resources:
-          limits:
-            cpu: "1"
-            memory: 1G
-          requests:
-            cpu: 600m
-            memory: 1G
+        resources: {}
         terminationMessagePath: /dev/termination-log
         terminationMessagePolicy: File
         volumeMounts:
@@ -112,24 +106,16 @@ spec:
         - 99
       terminationGracePeriodSeconds: 30
       volumes:
+      - hostPath:
+          path: /tmp/data-dir
+          type: Directory
+        name: datadir
       - configMap:
           defaultMode: 420
-          name: another-name-pxc-nodes
+          name: hostpath-pxc
           optional: true
         name: config-volume
   updateStrategy:
     rollingUpdate:
       partition: 0
     type: RollingUpdate
-  volumeClaimTemplates:
-  - metadata:
-      name: datadir
-    spec:
-      accessModes:
-      - ReadOnlyMany
-      resources:
-        requests:
-          storage: 7Gi
-      storageClassName: local-storage
-    status:
-      phase: Pending
