--- a/e2e-tests/limits/compare/statefulset_no-requests-no-limits-pxc.yml
+++ b/e2e-tests/limits/compare/statefulset_no-requests-no-limits-pxc.yml
@@ -28,7 +28,7 @@ spec:
       containers:
       - env:
         - name: PXC_SERVICE
-          value: some-name-pxc-unready
+          value: no-requests-no-limits-pxc-unready
         - name: MYSQL_ROOT_PASSWORD
           valueFrom:
             secretKeyRef:
